--- a/src/archive/web/js/zul/db/less/calendar.less
+++ b/src/archive/web/js/zul/db/less/calendar.less
@@ -148,7 +148,7 @@
 	&-right[disabled],
 	&-disabled {
 		color: @disabledColor !important;
-		.opacity(0.4);
+		.opacity(@disabledOpacityHigh);
 		text-shadow: none !important;
 		cursor: default !important;
 
