--- a/src/archive/web/js/zul/inp/less/combo.less
+++ b/src/archive/web/js/zul/inp/less/combo.less
@@ -60,7 +60,7 @@
 	}
 
 	&-disabled {
-		.opacity(@disabledOpacity);
+		.opacity(@disabledOpacityHigh);
 		& * {
 			color: @disabledColor !important;
 			background: @disabledBackgroundColor !important;
