--- a/src/archive/web/js/zul/inp/less/input.less
+++ b/src/archive/web/js/zul/inp/less/input.less
@@ -31,7 +31,7 @@
 	&[disabled] {
 		color: @disabledColor !important;
 		background: @disabledBackgroundColor !important;
-		.opacity(@disabledOpacity);
+		.opacity(@disabledOpacityHigh);
 		cursor: default !important;
 	}
 
