--- a/src/archive/web/js/zul/wgt/less/button.less
+++ b/src/archive/web/js/zul/wgt/less/button.less
@@ -29,7 +29,7 @@
 	&[disabled] {
 		border-color: @buttonBorderColor;
 		.verGradient(@buttonGradientStart, @buttonGradientEnd);
-		.opacity(@disabledOpacity);
+		.opacity(@disabledOpacityLow);
 		.boxShadow('none');
 		cursor: default;
 	}
