--- a/src/archive/web/js/zul/wgt/less/toolbar.less
+++ b/src/archive/web/js/zul/wgt/less/toolbar.less
@@ -125,7 +125,7 @@
 		color: @disabledColor !important;
 		border: 1px solid transparent;
 		.resetGradient();
-		.opacity(@disabledOpacity);
+		.opacity(@disabledOpacityLow);
 		cursor: default !important;
 		.boxShadow('none');
 	}
