--- a/src/archive/web/js/zul/grid/less/grid.less
+++ b/src/archive/web/js/zul/grid/less/grid.less
@@ -15,8 +15,8 @@
 }
 
 //grid
-.z-grid {
-	border: 1px solid @baseBorderColor;
+.z-grid { 
+	border-bottom: 1px solid @baseBorderColor;
 	overflow: hidden;
 	zoom: 1;
 	//grid header
@@ -148,7 +148,8 @@
 	}
 	.z-row-inner,
 	.z-cell {
-		border-right: 1px solid @meshContentBorderColor;
+		border-right: 1px solid #cfcfcf;
+		border-bottom: 1px solid #cfcfcf;
 		overflow: hidden;
 		position: relative;
 		z-index: 0;
