--- a/src/archive/web/js/zul/wgt/less/toolbar.less
+++ b/src/archive/web/js/zul/wgt/less/toolbar.less
@@ -63,7 +63,7 @@
 .z-toolbar-tabs .z-toolbar-content,
 .z-toolbar-tabs .z-toolbar-content span,
 .z-toolbar-content, .z-toolbar-content span {
-	font-size: @fontSizeSmall;
+	font-size: @fontSizeMedium;
 }
 .z-toolbar-panel .z-toolbar-content,
 .z-toolbar-panel .z-toolbar-content span {
@@ -137,7 +137,7 @@
 	.verGradient(@checkedGradientStart, @checkedGradientEnd);
 }
 .z-toolbarbutton-content {
-	.fontStyle(@baseTitleFontFamily, @fontSizeSmall, normal, @baseTextColor);
+	.fontStyle(@baseTitleFontFamily, @fontSizeMedium, normal, @secondaryColor);
 	padding: 2px;
 	line-height: @baseLineHeight + 6; // 20px for IE to v-align center
 	vertical-align: middle;
