--- a/src/archive/web/js/zul/wnd/less/window.less
+++ b/src/archive/web/js/zul/wnd/less/window.less
@@ -18,8 +18,10 @@
 	}
 
 	&-header {
-		.fontStyle(@baseTitleFontFamily, @fontSizeMedium, normal, @textColorGrayDark);
-		padding: 3px 0 5px 0;
+		border-bottom: 1px solid @baseBorderColor;
+		.fontStyle(@baseTitleFontFamily, @fontSizeMedium, normal, white);
+		padding-left: 3px;
+		font-weight: bold;
 		line-height: @baseButtonWidth;
 		.defaultOverflowZoom();
 		cursor: default;
@@ -30,9 +32,9 @@
 	}
 
 	&-content {
-		border: 1px solid @baseBorderColor;
+		border: 0px;
 		margin: 0px;
-		padding: 4px;
+		padding: 0px;
 		background: @baseBackgroundColor;
 		.defaultOverflowZoom();
 	}
