--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -5,19 +5,24 @@
 // ------------------------------------
 @ecdsLightBorderColor:			#f2f2f2;
 @ecdsListboxHighlistColor:		#b5d3e4;
-@ecdsHighlightColor:			#ffef34;
+@ecdsHighlightColor:			yellow;
 @inputBorderRadius:             @baseBorderRadius;
 @checkboxHoverBorderColor:      @primaryColor;
 @inputDisableColor:  			white;
 @inputDisableBackgroundColor:   @iconDisabledColor; 
 @primaryColor:   				#438EB9; 
+@secondaryColor:				#636363;
+@ecdsBlackColor:				#2d2b2b;
+@ecdsWhiteColor:				white;
+@ecdsButtonHover:				#43acb9;
+@ecdsButtonActive:				#4371b9;
 
 // -------------------------------------
 // Typography
 // -------------------------------------
 @baseFontSize:                 14px;
-@baseTitleFontFamily:          "Helvetica Neue", Helvetica, Arial, sans-serif;
-@baseContentFontFamily:        Arial, Sans-serif;
+@baseTitleFontFamily:          "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
+@baseContentFontFamily:        "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
 @baseLineHeight:               14px;
 
 // Component height
@@ -53,10 +58,10 @@
 // Component Basic Coloring
 // -------------------------------------
 // Font color
-@baseTextColor:                #000000;
-@textColorGray:                #000000;
-@textColorGrayDark:            #000000;
-@textColorGrayLight:           #000000;
+@baseTextColor:                @ecdsBlackColor;
+@textColorGray:                @ecdsBlackColor;
+@textColorGrayDark:            @ecdsBlackColor;
+@textColorGrayLight:           @ecdsBlackColor;
 @textColorBlue:                #2184BA;
 @textColorGreen:               #46A546;
 @textColorOrange:              #F7941D;
@@ -81,9 +86,9 @@
 // -------------------------------------
 // Button (used for button, combobutton)
 // -------------------------------------
-@buttonBorderColor:            #A9A9A9;
-@buttonGradientStart:          #FEFEFE;
-@buttonGradientEnd:            #EEEEEE;
+@buttonBorderColor:            @primaryColor;
+@buttonGradientStart:          @primaryColor;
+@buttonGradientEnd:            @primaryColor;
 
 // -------------------------------------
 // Input (used for textbox, intbox, spinner, ...)
@@ -132,7 +137,7 @@
 @hoverGradientEnd:             #E4E4E4;
 
 // Disabled
-@disabledColor:                #000000;
+@disabledColor:                @ecdsBlackColor;
 @disabledBackgroundColor:      #F0F0F0;
 @disabledOpacity:              0.6;
 @disabledOpacityLow:           0.3;
@@ -264,8 +269,8 @@
 
 // window
 @windowBorderColor:            #9C9C9C;
-@windowBackgroundColor:        #D9E5EF;
-@windowFramePadding:           4px;
+@windowBackgroundColor:        #6da8ca;
+@windowFramePadding:           0px;
 
 // tabbox
 @tabSelectedBackgroundColor:   #FFFFFF;
