--- a/src/archive/web/js/zul/grid/less/grid.less
+++ b/src/archive/web/js/zul/grid/less/grid.less
@@ -16,6 +16,7 @@
 
 //grid
 .z-grid { 
+	border-top: 1px solid @baseBorderColor;
 	border-bottom: 1px solid @baseBorderColor;
 	overflow: hidden;
 	zoom: 1;
