--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -16,6 +16,10 @@
 @ecdsWhiteColor:				white;
 @ecdsButtonHover:				#43acb9;
 @ecdsButtonActive:				#4371b9;
+@ecdsMenuColor:					#686F7A;
+@ecdsMenuBackgroundColor:		#F7F8FA;
+@ecdsMenuHoverColor:			#E8E9EB;
+@ecdsMenuHoverFontColor:		#14171C;
 
 // -------------------------------------
 // Typography
