--- a/src/archive/web/js/zul/tab/less/tabbox.less
+++ b/src/archive/web/js/zul/tab/less/tabbox.less
@@ -416,7 +416,7 @@
 	&-selected {
 		.resetGradient();
 		background: @tabSelectedBackgroundColor;
-		border-top: 2px solid @primaryColor;
+		border-top: 2px solid @ecdsSelectedColor;
 		.boxShadow('0 1px 0 #FFFFFF');
 		&:hover {
 			.resetGradient();
@@ -428,10 +428,10 @@
 		.z-tab-text {
 			cursor: default;
 			font-weight: bold;
-			color: @primaryColor;
+			color: @ecdsSelectedColor;
 		} 
 		.z-tab-icon {
-			color: @primaryColor;
+			color: @ecdsSelectedColor;
 			&:hover {
 				color: red;
 			}
