--- a/src/archive/web/js/zul/wgt/less/button.less
+++ b/src/archive/web/js/zul/wgt/less/button.less
@@ -7,7 +7,7 @@
 	.borderRadius(@baseBorderRadius);
 	padding: 3px 8px;
 	line-height: @baseLineHeight;
-	background-color: @primaryColor;
+	background-color: @buttonColor;
 	cursor: pointer;
 	white-space: nowrap;
 	margin-right: 4px;
@@ -23,7 +23,7 @@
 	}
 	&:active {
 		border-color: @ecdsButtonActive; 
-		background-color: @ecdsButtonActive;
+		background-color: @buttonColor;
 	}
 	&[disabled] {
 		border-color: @buttonBorderColor;
