--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -21,7 +21,10 @@
 @ecdsMenuHoverColor:			#E8E9EB;
 @ecdsMenuHoverFontColor:		#14171C;
 @ecdsListboxHeader:				#438EB9;
-@ecdsSelectedColor:			   #4885ed;
+
+@googleBlue:					#4885ed;
+@googleGreen:					#3cba54;
+@ecdsSelectedColor:			   @googleBlue;
 @buttonColor:				   @ecdsSelectedColor;
 
 // -------------------------------------
@@ -275,7 +278,7 @@
 @progressmeterGradientEnd:     #C6E9FA;
 
 // window
-@windowBorderColor:            #9C9C9C;
+@windowBorderColor:            #CFCFCF;
 @windowBackgroundColor:        #6da8ca;
 @windowFramePadding:           0px;
 
@@ -283,7 +286,7 @@
 @tabSelectedBackgroundColor:   #FFFFFF;
 
 // panel
-@panelBorderColor:             #9C9C9C;
+@panelBorderColor:             #CFCFCF;
 @panelBackgroundColor:         #E1EDF4;
 @panelBodyBackground:          #F0F6F9;
 
