--- a/src/archive/web/js/zul/wgt/less/toolbar.less
+++ b/src/archive/web/js/zul/wgt/less/toolbar.less
@@ -106,8 +106,8 @@
 	display: inline-block;
 	border: 1px solid transparent;
 	.borderRadius(@borderRadiusSmall);
-	margin: 0 2px;
-	padding: 1px 0;
+	margin: 0 0px;
+	padding: 1px 2px;
 	line-height: @baseLineHeight;
 	position: relative;
 	cursor: pointer;
