--- a/src/archive/web/js/zul/tab/less/tabbox.less
+++ b/src/archive/web/js/zul/tab/less/tabbox.less
@@ -356,7 +356,11 @@
 	}
 
 	&:hover {
-		background-color:@meshStripeBackgroundColor; 
+		background-color:@ecdsMenuHoverColor;  
+		-webkit-transition: all 0.1s ease-in-out;
+		-moz-transition: all 0.1s ease-in-out;
+		-o-transition: all 0.1s ease-in-out;
+		transition: all 0.1s ease-in-out;
 	}
 
 	&-icon {
@@ -372,10 +376,7 @@
 		}
 	}
 
-	&-text {
-		&:hover {
-			color:@primaryColor;
-		}
+	&-text { 
 		font-style: normal;
 		color: @ecdsMenuColor;
 		display: block;
