--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -16,7 +16,7 @@
 @ecdsWhiteColor:				white;
 @ecdsButtonHover:				#5a91ee;
 @ecdsButtonActive:				#4371b9;
-@ecdsMenuColor:					#686F7A;
+@ecdsMenuColor:					#5f6368;
 @ecdsMenuBackgroundColor:		#F7F8FA;
 @ecdsMenuHoverColor:			#E8E9EB;
 @ecdsMenuHoverFontColor:		#14171C;
